--- a/Hoof/Views/AnnualPlan/Plan.cshtml
+++ b/Hoof/Views/AnnualPlan/Plan.cshtml
@@ -121,7 +121,7 @@
     <tr>
         <td>a) @Text.Pastures</td>
         <td>@Text.UnitPiece</td>
-        <td>@Model.AnnualPlanModel.HuntEquipmentPlanModel.Pastures.</td>
+        <td>@Model.AnnualPlanModel.HuntEquipmentPlanModel.Pastures.PreviousPlan</td>
         <td>@Model.AnnualPlanModel.HuntEquipmentPlanModel.Pastures.Execution</td>
         <td>@Model.AnnualPlanModel.HuntEquipmentPlanModel.Pastures.CurrentState</td>
         <td>@Model.AnnualPlanModel.HuntEquipmentPlanModel.Pastures.FutureState</td>
