Added maintaining Pastures - add, edit, delete

--- a/Hoof/Views/Fodder/List.cshtml
+++ b/Hoof/Views/Fodder/List.cshtml
@@ -25,7 +25,7 @@
 <br />
 
 <button class="btn btn-primary" id="add" data-toggle="modal" data-target="#addFodderModal">Dodaj</button>
-<table class="table table-bordered table-hover" id="planTable">
+<table class="table table-bordered table-hover" id="fodderTable">
     <tr>
         <th hidden>
             Typ
@@ -77,8 +77,8 @@
                 @item.Date.ToString("dd/MM/yyyy")
             </td>
             <td style="text-align: center">
-                <button class="btn btn-xs btn-success editPlan">Edytuj</button>
-                <button class="btn btn-xs btn-danger deletePlan">Usuń</button>
+                <button class="btn btn-xs btn-success editFodder">Edytuj</button>
+                <button class="btn btn-xs btn-danger deleteFodder">Usuń</button>
             </td>
         </tr>
     }
