--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -57,6 +57,20 @@
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Urządzenia łowieckie
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Paśniki", "Index", "Pasture")</li>
+                            <li>@Html.ActionLink("Lizawki", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Ambony", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Woliery", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Zagrody", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Inne", "Index", "AnnualPlan")</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                             Plan
                             <span class="caret"></span>
                         </a>
