Added maintaining Pulpits - add, edit, delete

--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Paśniki", "Index", "Pasture")</li>
                             <li>@Html.ActionLink("Lizawki", "Index", "AnnualPlan")</li>
-                            <li>@Html.ActionLink("Ambony", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Ambony", "Index", "Pulpit")</li>
                             <li>@Html.ActionLink("Woliery", "Index", "AnnualPlan")</li>
                             <li>@Html.ActionLink("Zagrody", "Index", "AnnualPlan")</li>
                             <li>@Html.ActionLink("Inne", "Index", "AnnualPlan")</li>
