Added Deer Lickers and Watering Places to Annual Plan + Annual Plan refactoring

--- a/Hoof/Views/AnnualPlan/Plan.cshtml
+++ b/Hoof/Views/AnnualPlan/Plan.cshtml
@@ -368,7 +368,7 @@
             <td></td>
             <td>@gameKindPlanModel.GameCountBefore10March</td>
             <td></td>
-            <td></td>
+            <td>@gameKindPlanModel.GameCountBeforeHuntingSeason</td>
             <td>@gameKindPlanModel.CurrentHuntPlanCulls</td>
             <td>@gameKindPlanModel.CurrentHuntPlanCatches</td>
             <td>@gameKindPlanModel.CurrentHuntPlanCullsMin</td>
