Added maintaining Deer Lickers - add, edit, delete

--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         </a>
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Paśniki", "Index", "Pasture")</li>
-                            <li>@Html.ActionLink("Lizawki", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Lizawki", "Index", "DeerLicker")</li>
                             <li>@Html.ActionLink("Ambony", "Index", "Pulpit")</li>
                             <li>@Html.ActionLink("Wodopoje", "Index", "AnnualPlan")</li>
                         </ul>
