Added maintaining Watering Place - add, edit, delete

--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                             <li>@Html.ActionLink("Paśniki", "Index", "Pasture")</li>
                             <li>@Html.ActionLink("Lizawki", "Index", "DeerLicker")</li>
                             <li>@Html.ActionLink("Ambony", "Index", "Pulpit")</li>
-                            <li>@Html.ActionLink("Wodopoje", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Wodopoje", "Index", "WateringPlace")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
