Added Cost to Annual Plan + maintaining Cost - add, edit, delete

--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Karma", "Index", "Fodder")</li>
                             <li>@Html.ActionLink("Obwód", "Index", "AnnualPlan")</li>
-                            <li>@Html.ActionLink("Koszty", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Koszty", "Index", "Expense")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
