Added maintaining Revenue - add, edit, delete

--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
                             <li>@Html.ActionLink("Karma", "Index", "Fodder")</li>
                             <li>@Html.ActionLink("Obwód", "Index", "AnnualPlan")</li>
                             <li>@Html.ActionLink("Koszty", "Index", "Expense")</li>
+                            <li>@Html.ActionLink("Przychody", "Index", "CarcassRevenue")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
