--- a/Hoof/Views/Shared/_Layout.cshtml
+++ b/Hoof/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                         </a>
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Karma", "Index", "Fodder")</li>
-                            <li>@Html.ActionLink("Obwód", "Index", "AnnualPlan")</li>
+                            <li>@Html.ActionLink("Prace gospodarcze", "Index", "Labor")</li>
                             <li>@Html.ActionLink("Koszty", "Index", "Expense")</li>
                             <li>@Html.ActionLink("Przychody", "Index", "CarcassRevenue")</li>
                         </ul>
